Route Page Work

--- a/assignment_8/route1.html
+++ b/assignment_8/route1.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ride the Burgh | Routes</title>
+    <title>Ride the Burgh | Squirrel Hill Loop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://www.google.com/jsapi"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5WMaAv7Iui1iD6yAhy3TAEZTLsJLpRE&callback=initMap&libraries=&v=weekly"
-      defer
-    ></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5WMaAv7Iui1iD6yAhy3TAEZTLsJLpRE&callback=initMap&libraries=&v=weekly"
+        defer></script>
     <link rel="stylesheet" href="https://use.typekit.net/rij5puh.css">
     <link href="./style.css" rel="stylesheet" />
     <script src="bike.js"></script>
@@ -62,13 +62,28 @@
         </div>
     </div>
 
-    <div class = "content">
-        <div id="map" style="height: 400px"></div>
-        <div id="elevation_chart"></div>
+    <div class="content">
+        <div class="mapGuts">
+            <div id="map" style="height: 400px"></div>
+            <div id="elevation_chart"></div>
+        </div>
+        <div class="spacer"></div>
+        <div class="textGuts">
+            <h3 class="hero3 grad">Start: Holden St. & Summerlea St. <br>
+                Finish: Holden St. & Summerlea St. <br>
+                Length: 10 miles <br>
+                Effort: Enthusiast <br>
+                Type: Loop <br>
+                Slope Score: 7 out of 10                
+                </h3>
+                <div class="breaker"></div>
 
+                <p class = "textGutsDes">
+                    This route puts the ‘hill’ in Squirrel Hill. You’ll be taken around the local parks and through local neighborhoods, but you might be hard pressed to notice as you put your feet down on the pedals!
+                </p>
         </div>
     </div>
-    
+
     <div class="bottom">
         <img class="hills2" src="./images/index_hills.png" alt="hills">
     </div>
