Map Path Update

--- a/assignment_8/index.html
+++ b/assignment_8/index.html
@@ -55,9 +55,9 @@
     <br>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="hero1 grad">Riding in Pittsburgh can be pure joy. <br> Or hills. </h1>
+            <h1 class="hero1 grad">Riding in Pittsburgh can be pure joy. <br><br> Or hills. </h1>
             <br><br>
-            <p class="lead grad">Set yourself up for success <br>
+            <p class="lead grad">Set yourself up for success
                 with local knowledge of the best routes, <br>
                 for any time of year or weather.</p>
         </div>
