--- a/assignment_8/index.html
+++ b/assignment_8/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!-- Head tags and links. Lots of goodness here. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ride the Burgh</title>
@@ -13,7 +14,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/rij5puh.css">
     <link href="./style.css" rel="stylesheet" />
-    <script src="cartNum.js"></script>
 </head>
 
 <body>
@@ -35,16 +35,14 @@
                     </button>
                 </div>
             </div>
+                        <!-- Collapsable Links -->
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
                         <a href="./routes.html" class="nav-link m-2 menu-item">Routes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">Resources</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">Search</a>
+                        <a href="./resources.html" class="nav-link m-2 menu-item">Resources</a>
                     </li>
                 </ul>
             </div>
@@ -53,9 +51,11 @@
     <br>
 
     <br>
-    <div class="jumbotron jumbotron-fluid">
+    <!-- Setting up page content. Pretty sparse -->
+    <div class="jumbotron">
         <div class="container">
-            <h1 class="hero1 grad">Riding in Pittsburgh can be pure joy. <br><br> Or hills. </h1>
+            <!-- Separate hero text class for landing page -->
+            <h1 class="heroL grad">Riding in Pittsburgh can be pure joy. <br><br> Or hills. </h1>
             <br><br>
             <p class="lead grad">Set yourself up for success
                 with local knowledge of the best routes, <br>
@@ -64,10 +64,10 @@
     </div>
     <div class="bottom">
         <img class = "hills" src="./images/index_hills.png" alt="hills">
-        <a href="./routes.html" class="carousel-caption">Routes</p>
+        <a href="./routes.html" class="carousel-caption">Routes</a>
     </div>
 
-    </main>
+    <!-- Bootstrap Scripting -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
