Setting up other routes

--- a/assignment_8/route1.html
+++ b/assignment_8/route1.html
@@ -18,7 +18,7 @@
         defer></script>
     <link rel="stylesheet" href="https://use.typekit.net/rij5puh.css">
     <link href="./style.css" rel="stylesheet" />
-    <script src="bike.js"></script>
+    <script src="./js/bike1.js"></script>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                         <a href="./routes.html" class="nav-link m-2 menu-item">Routes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item">Resources</a>
+                        <a href="./resources.html" class="nav-link m-2 menu-item">Resources</a>
                     </li>
                 </ul>
             </div>
