--- a/assignment_8/route2.html
+++ b/assignment_8/route2.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ride the Burgh</title>
+    <title>Ride the Burgh | Squirrel Hill Loop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://www.google.com/jsapi"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5WMaAv7Iui1iD6yAhy3TAEZTLsJLpRE&callback=initMap&libraries=&v=weekly"
+        defer></script>
     <link rel="stylesheet" href="https://use.typekit.net/rij5puh.css">
     <link href="./style.css" rel="stylesheet" />
+    <script src="./js/bike2.js"></script>
 </head>
 
 <body>
@@ -34,72 +40,57 @@
                     </button>
                 </div>
             </div>
-                        <!-- Collapsable Links -->
+            <!-- Collapsable Links -->
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
                         <a href="./routes.html" class="nav-link m-2 menu-item">Routes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link m-2 menu-item nav-active">Resources</a>
+                        <a href="./resources.html" class="nav-link m-2 menu-item">Resources</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <br>
-
-    <br>
-    <!-- Setting up page content. Pretty sparse -->
+<!-- Route Name -->
     <div class="jumbotron-fluid">
         <div class="container">
-            <h1 class="hero2 grad">Resources</h1>
+            <h1 class="hero2 grad"><br>Allegheny River Trail </h1>
         </div>
     </div>
-    <div class="breaker d-none d-lg-block"></div>
-    <div class="breaker d-none d-lg-block"></div>
-    <div class="row">
-        <div class="container col-lg-6">
-            <h3 class="grad">Bike Shops</h3>
-            <ul class="list-group-flush">
-                <li class="list-group-item">
-                    <a href="https://www.probikerun.com/" class="nav-link">Pro Bike + Run</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://kraynicksbikeshop.weebly.com/" class="nav-link">Kraynick's</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://biketek.com/" class="nav-link">Biketek Pittsburgh</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://www.fernhollowbicycles.com/" class="nav-link">Fern Hollow Bicycles</a>
-                </li>
-            </ul>           
-        </div>
 
-        <div class="container col-lg-6">
-            <h3 class="grad">Burgh Bike Initiatives</h3>
-            <ul class="list-group-flush">
-                <li class="list-group-item">
-                    <a href="https://pittsburghpa.gov/domi/bikeplan" class="nav-link">Bike(+) Plan</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://bikepgh.org/" class="nav-link">BikePGH</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://healthyridepgh.com/" class="nav-link">Healthy Ride PGH</a>
-                </li>
-                <li class="list-group-item">
-                    <a href="https://www.facebook.com/bikepgh/" class="nav-link">Bike Pittsburgh</a>
-                </li>
-            </ul>           
+<!-- Setting up the content. Please refresh when you switch between different device contexts in dev tools, the elevation chart needs it to be responsive. Thanks! -->
+
+    <div class="content container-fluid">
+        <!-- Map stuff. Elevation and route. -->
+        <div class="mapGuts order-sm-1 flex-column col-lg-6 col-md-12 span12">
+            <div class="order-sm-1" id="map"></div>
+            <div id="elevation_chart" class="order-sm-2"></div>
+        </div>
+        <div class="spacer"></div>
+        <div class="textGuts col-lg-6 order-sm-2">
+            <h3 class="hero3 grad">
+                Start: Holden St. & Summerlea St. <br>
+                Finish: Holden St. & Summerlea St. <br>
+                Length: 23 miles <br>
+                Effort: Enthusiast <br>
+                Type: Loop <br>
+                Slope Score: 5 out of 10
+            </h3>
+            <div class="breaker"></div>
+            <p class="textGutsDes">
+                This casual ride along the river will take you past
+                some of the most outstanding examples of the
+                architecture of the city, taking you right to
+                Point Park and back to the 31st St Bridge.
+            </p>
+
+            <a href="https://www.strava.com/routes/27550897/export_gpx" class="btn btn-info" download>Download Route</a>
         </div>
     </div>
-<!-- End breaks -->
     <div class="breaker"></div>
-    <div class="breaker d-none d-lg-block"></div>
-
-    <!-- Footer imagery and link to routes -->
+    <div class="breaker"></div>
     <div class="bottom">
         <img class="hills2" src="./images/index_hills.png" alt="hills">
     </div>
