--- a/assignment_8/routes.html
+++ b/assignment_8/routes.html
@@ -61,7 +61,7 @@
             <a href="./route1.html" class="stretched-link">
                 <div class="card-body">
                     <img class="trailPre order-sm-1" src="./images/map2.png" alt="Squirrel Hill Loop">
-                    <div class="cardFill col-sm-4 order-sm-2">
+                    <div class="cardFill col-lg-4  order-sm-2">
                         <h2 class="hero2 grad">Squirrel Hill Loop</h2>
                         <p class="card-text">
                             Length: 10 miles <br class="d-none d-lg-block"><br>
@@ -71,7 +71,7 @@
                         </p>
                     </div>
                     <!-- Hiding the description on mobile to de-clutter, will apply to all cards -->
-                    <div class="order-sm-3 col-sm-4 cardDes d-none d-lg-block">
+                    <div class="order-sm-3 col-sm-4 cardDes col-lg-4  d-none d-lg-block">
                         <br>
                         <br class="d-none d-lg-block">
                         <br class="d-none d-lg-block">
@@ -85,18 +85,18 @@
                 </div>
             </a>
             <br>
-            <a href="./route1.html" class="stretched-link">
+            <a href="./route2.html" class="stretched-link">
                 <div class="card-body">
                     <img class="order-sm-1 trailPre" src="./images/map1.png" alt="Allegheny River Trail">
-                    <div class="cardFill col-sm-4 order-sm-2">
+                    <div class="cardFill col-lg-4 order-sm-2">
                         <h2 class="hero2 grad">Allegheny River Trail</h2>
-                        <p class="card-text">Length: 5 miles <br class="d-none d-lg-block"><br>
-                            Effort: Casual <br class="d-none d-lg-block"><br>
-                            Type: Out and Back <br class="d-none d-lg-block"><br>
-                            Slope Score: 2 out of 10
+                        <p class="card-text">Length: 23 miles <br class="d-none d-lg-block"><br>
+                            Effort: Enthusiast <br class="d-none d-lg-block"><br>
+                            Type: Loop <br class="d-none d-lg-block"><br>
+                            Slope Score: 5 out of 10
                         </p>
                     </div>
-                    <div class="order-sm-3 col-sm-4 cardDes  d-none d-lg-block">
+                    <div class="order-sm-3 col-sm-4 cardDes col-lg-4 d-none d-lg-block">
                         <br>
                         <br class="d-none d-lg-block">
                         <br class="d-none d-lg-block">
@@ -110,26 +110,23 @@
                 </div>
             </a>
             <br>
-            <a href="./route1.html" class="stretched-link">
+            <a href="./route3.html" class="stretched-link">
                 <div class="card-body">
-                    <img class="order-sm-1 trailPre" src="./images/map3.png" alt="Squirrel Hill Loop">
-                    <div class="cardFill col-sm-4 order-sm-2">
-                        <h2 class="hero2 grad">McCandless Out and Back</h2>
+                    <img class="order-sm-1 trailPre" src="./images/map3.png" alt="Out and Back">
+                    <div class="cardFill col-lg-4 order-sm-2">
+                        <h2 class="hero2 grad">North and Back</h2>
                         <p class="card-text">Length: 32 miles <br class="d-none d-lg-block"><br>
                             Effort: Roadie <br class="d-none d-lg-block"><br>
                             Type: Out and Back <br class="d-none d-lg-block"><br>
                             Slope Score: 9 out of 10
                         </p>
                     </div>
-                    <div class="order-sm-3 col-sm-4 cardDes  d-none d-lg-block">
+                    <div class="order-sm-3 col-sm-4 cardDes col-lg-4 d-none d-lg-block">
                         <br>
                         <br class="d-none d-lg-block">
                         <br class="d-none d-lg-block">
-                        <p class="des">
-                            This route puts the ‘hill’ in Squirrel Hill. You’ll be
-                            taken around the local parks and through local
-                            neighborhoods, but you might be hard pressed to
-                            notice as you put your feet down on the pedals!
+                        <p class=des>
+                            Not for the faint of heart, the Northern Out and Back will take you north of the city through the McCandless Township, up into some of the beautiful hills and mountains that surround the city. Full of wonderful sights that you have to earn!
                         </p>
                     </div>
                 </div>
