Commenting and Partitioning
Grouping files into their appropriate folders.

--- a/assignment_8/resources.html
+++ b/assignment_8/resources.html
@@ -99,7 +99,7 @@
     <div class="breaker"></div>
     <div class="breaker d-none d-lg-block"></div>
 
-    <!-- Footer imagery and link to routes -->
+    <!-- Footer imagery -->
     <div class="bottom">
         <img class="hills2" src="./images/index_hills.png" alt="hills">
     </div>
