--- a/assignment_8/routePages/route2.html
+++ b/assignment_8/routePages/route2.html
@@ -17,8 +17,8 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5WMaAv7Iui1iD6yAhy3TAEZTLsJLpRE&callback=initMap&libraries=&v=weekly"
         defer></script>
     <link rel="stylesheet" href="https://use.typekit.net/rij5puh.css">
-    <link href="./style.css" rel="stylesheet" />
-    <script src="./js/bike1.js"></script>
+    <link href="../style.css" rel="stylesheet" />
+    <script src="../js/bike2.js"></script>
 </head>
 
 <body>
@@ -28,11 +28,11 @@
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block" href="./index.html">
+                <a class="navbar-brand d-none d-lg-inline-block" href="../index.html">
                     Ride the Burgh
                 </a>
-                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="./index.html">
-                    <img src="./images/Vector@2x.png" alt="logo">
+                <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="../index.html">
+                    <img src="../images/Vector@2x.png" alt="logo">
                 </a>
                 <div class="w-100 text-right">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
@@ -44,10 +44,10 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a href="./routes.html" class="nav-link m-2 menu-item">Routes</a>
+                        <a href="../routes.html" class="nav-link m-2 menu-item">Routes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./resources.html" class="nav-link m-2 menu-item">Resources</a>
+                        <a href="../resources.html" class="nav-link m-2 menu-item">Resources</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
 <!-- Route Name -->
     <div class="jumbotron-fluid">
         <div class="container">
-            <h1 class="hero2 grad"><br>Squirrel Hill Loop </h1>
+            <h1 class="hero2 grad"><br>Allegheny River Trail </h1>
         </div>
     </div>
 
@@ -73,24 +73,26 @@
             <h3 class="hero3 grad">
                 Start: Holden St. & Summerlea St. <br>
                 Finish: Holden St. & Summerlea St. <br>
-                Length: 10 miles <br>
+                Length: 23 miles <br>
                 Effort: Enthusiast <br>
                 Type: Loop <br>
-                Slope Score: 7 out of 10
+                Slope Score: 5 out of 10
             </h3>
             <div class="breaker"></div>
             <p class="textGutsDes">
-                This route puts the ‘hill’ in Squirrel Hill. You’ll be taken around the local parks and through local
-                neighborhoods, but you might be hard pressed to notice as you put your feet down on the pedals!
+                This casual ride along the river will take you past
+                some of the most outstanding examples of the
+                architecture of the city, taking you right to
+                Point Park and back to the 31st St Bridge.
             </p>
 
-            <a href="https://www.strava.com/routes/2732724394084862476/export_gpx" class="btn btn-info" download>Download Route</a>
+            <a href="https://www.strava.com/routes/27550897/export_gpx" class="btn btn-info" download>Download Route</a>
         </div>
     </div>
     <div class="breaker"></div>
     <div class="breaker"></div>
     <div class="bottom">
-        <img class="hills2" src="./images/index_hills.png" alt="hills">
+        <img class="hills2" src="../images/index_hills.png" alt="hills">
     </div>
 
     <!-- Bootstrap scripting -->
