--- a/assignment_8/routes.html
+++ b/assignment_8/routes.html
@@ -22,7 +22,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
-                    <!-- hidden spacer to center brand on mobile --></span>
+                    <!-- hidden spacer to center brand on mobile -->
+                </span>
                 <a class="navbar-brand d-none d-lg-inline-block" href="./index.html">
                     Ride the Burgh
                 </a>
@@ -48,7 +49,7 @@
             </div>
         </nav>
     </header>
-
+<!-- Header Hero -->
     <div class="jumbotron-fluid">
         <div class="container">
             <br> <br>
@@ -58,7 +59,7 @@
     <!-- Add in the content, being the route cards, and make them responsive using the Bootstrap columns and media queries. -->
     <div class="routeCards container-fluid span12">
         <div class="card row">
-            <a href="./route1.html" class="stretched-link">
+            <a href="./routePages/route1.html" class="stretched-link">
                 <div class="card-body">
                     <img class="trailPre order-sm-1" src="./images/map2.png" alt="Squirrel Hill Loop">
                     <div class="cardFill col-lg-4  order-sm-2">
@@ -85,7 +86,8 @@
                 </div>
             </a>
             <br>
-            <a href="./route2.html" class="stretched-link">
+            <!-- Second Route -->
+            <a href="./routePages/route2.html" class="stretched-link">
                 <div class="card-body">
                     <img class="order-sm-1 trailPre" src="./images/map1.png" alt="Allegheny River Trail">
                     <div class="cardFill col-lg-4 order-sm-2">
@@ -110,7 +112,8 @@
                 </div>
             </a>
             <br>
-            <a href="./route3.html" class="stretched-link">
+            <!-- Third Route -->
+            <a href="./routePages/route3.html" class="stretched-link">
                 <div class="card-body">
                     <img class="order-sm-1 trailPre" src="./images/map3.png" alt="Out and Back">
                     <div class="cardFill col-lg-4 order-sm-2">
@@ -126,7 +129,9 @@
                         <br class="d-none d-lg-block">
                         <br class="d-none d-lg-block">
                         <p class=des>
-                            Not for the faint of heart, the Northern Out and Back will take you north of the city through the McCandless Township, up into some of the beautiful hills and mountains that surround the city. Full of wonderful sights that you have to earn!
+                            Not for the faint of heart, the Northern Out and Back will take you north of the city
+                            through the McCandless Township, up into some of the beautiful hills and mountains that
+                            surround the city. Full of wonderful sights that you have to earn!
                         </p>
                     </div>
                 </div>
@@ -136,7 +141,7 @@
     </div>
     <div class="breaker"></div>
     <div class="breaker"></div>
-
+<!-- Footer -->
     <div class="bottom">
         <img class="hills2" src="./images/index_hills.png" alt="hills">
     </div>
