Button Pushing on Mobile

--- a/assignment_8/routePages/route2.html
+++ b/assignment_8/routePages/route2.html
@@ -91,6 +91,7 @@
     </div>
     <div class="breaker"></div>
     <div class="breaker"></div>
+    <div class="breaker"></div>
     <div class="bottom">
         <img class="hills2" src="../images/index_hills.png" alt="hills">
     </div>
