Write-up, Finalized
Finished Website with Write-up

--- a/assignment_8/index.html
+++ b/assignment_8/index.html
@@ -23,7 +23,7 @@
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block" href="#">
+                <a class="navbar-brand grad d-none d-lg-inline-block" href="#">
                     Ride the Burgh
                 </a>
                 <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="./index.html">
