--- a/assignment_8/routePages/route2.html
+++ b/assignment_8/routePages/route2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ride the Burgh | Squirrel Hill Loop</title>
+    <title>Ride the Burgh | Allegheny River Trail</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +28,7 @@
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block" href="../index.html">
+                <a class="navbar-brand grad d-none d-lg-inline-block" href="../index.html">
                     Ride the Burgh
                 </a>
                 <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="../index.html">
