--- a/assignment_8/routePages/route1.html
+++ b/assignment_8/routePages/route1.html
@@ -28,7 +28,7 @@
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile --></span>
-                <a class="navbar-brand d-none d-lg-inline-block" href="../index.html">
+                <a class="navbar-brand grad d-none d-lg-inline-block" href="../index.html">
                     Ride the Burgh
                 </a>
                 <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="../index.html">
